Añadida la noticia nº 7

--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@ window.cookieconsent.initialise({
 		<div class="main-menu" id="main-menu"></div>
 		<div class="second-bar" id="second-bar"><a href="index.html"><div class="logo"></div></a></div>
 		<div class="content-container" style="width: 630px; float: left;">
+		<div class="content-title" style="width: 610px;">GlowNovedades #3 - ¡Feliz año nuevo!</div>
+			<div class="content">
+				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/12-2017/GlowNovedades3-31/images/top.png" ><br>
+				¡Estamos de vuelta! </b>
+				¡Las <b>GlowNovedades</b> de este mes vienen cargadas de sorpresas!<br><br>
+
+				En primer lugar, nuestra <b>más reciente revelación, la traducción de Persona 4,</b> avanza lentamente, pues estamos centrándonos en terminar Lord of Magna.<br>
+				Se están traduciendo las imágenes, definiciones, el compendium y demás, antes de comenzar con la historia...<br><br>
+				<center><a class="boton_readmore" href="articles/12-2017/GlowNovedades3-31/GlowNovedades-3.html">Leer más</a></center>
+			</div>
 		<div class="content-title" style="width: 610px;">¡Lanzamos la traducción de SMT: Persona 4 y el nacimiento de TraduSquare!</div>
 			<div class="content">
 				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/12-2017/LanzamientoPersona4ytradusquare-24/images/top.png" ><br>
@@ -95,15 +105,6 @@ window.cookieconsent.initialise({
                     <b><u>GlowNovedades</u></b>, donde cada mes explicaremos el estado de los proyectos, pero además,
                     <b>¡Una gran sorpresa!</b>...<br> <br>
 				<center><a class="boton_readmore" href="articles/10-2017/GlowNovedades1-31/GlowNovedades-1.html">Leer más</a></center>
-			</div>
-			<div class="content-title" style="width: 610px;">Avances sobre la traducción de Lord of Magna: Maiden Heaven</div>
-			<div class="content">
-				<img onload="this.style.opacity='1';" style="width: 570px; height: 320px;" src="articles/10-2017/AvancesLord-25/images/top.png" ><br>
-                <b>¡Noticias frescas!</b><br><br>
-                Termina el mes y nosotros seguimos con muchas ganas.<br>
-                Estamos viento en popa trabajando en nuestros proyectos, pero ha surgido una idea que
-                queremos llevar a cabo... <br><br>
-				<center><a class="boton_readmore" href="articles/10-2017/AvancesLord-25/Avances_Lord_of_Magna.html">Leer más</a></center>
 			</div>
 		</div>
 			<div class="module" style="width: 260px;">
