--- a/translations/lordofmagna/galeria.html
+++ b/translations/lordofmagna/galeria.html
@@ -124,7 +124,19 @@ window.cookieconsent.initialise({
     <img onload="this.style.opacity='1';" src="gallery/Localizacion.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
   </div>
   <div class="column">
-    <img onload="this.style.opacity='1';" src="gallery/skill.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
+    <img onload="this.style.opacity='1';" src="gallery/Habilidades-1.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Habilidades-2.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Dialogo-5.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Estado.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/Objetos.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
   </div>
 </div>
 
@@ -133,51 +145,71 @@ window.cookieconsent.initialise({
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 10</div>
+      <div class="numbertext">1 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 10</div>
+      <div class="numbertext">2 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 10</div>
+      <div class="numbertext">3 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-3.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 10</div>
+      <div class="numbertext">4 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-4.jpg" style="margin: auto;">
     </div>
     <div class="mySlides">
-      <div class="numbertext">5 / 10</div>
+      <div class="numbertext">5 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Nombres.JPG" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6 / 10</div>
+      <div class="numbertext">6 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Combate-1.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7 / 10</div>
+      <div class="numbertext">7 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Combate-2.jpg" style="margin: auto;">
     </div>
     <div class="mySlides">
-      <div class="numbertext">8 / 10</div>
+      <div class="numbertext">8 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Eventos.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">9 / 10</div>
+      <div class="numbertext">9 / 14</div>
         <img onload="this.style.opacity='1';" src="gallery/Localizacion.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">10 / 10</div>
-        <img onload="this.style.opacity='1';" src="gallery/skill.jpg" style="margin: auto;">
+      <div class="numbertext">10 / 14</div>
+        <img onload="this.style.opacity='1';" src="gallery/Habilidades-1.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">11 / 14</div>
+        <img onload="this.style.opacity='1';" src="gallery/Habilidades-2.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">12 / 14</div>
+        <img onload="this.style.opacity='1';" src="gallery/Dialogo-5.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">13 / 14</div>
+        <img onload="this.style.opacity='1';" src="gallery/Estado.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">14 / 14</div>
+        <img onload="this.style.opacity='1';" src="gallery/Objetos.jpg" style="margin: auto;">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -221,7 +253,23 @@ window.cookieconsent.initialise({
     </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/skill.jpg" onclick="currentSlide(10)" alt="Habilidades">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Habilidades-1.jpg" onclick="currentSlide(10)" alt="Habilidades">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Habilidades-2.jpg" onclick="currentSlide(11)" alt="Habilidades">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Dialogo-5.jpg" onclick="currentSlide(12)" alt="Conversaciones">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Estado.jpg" onclick="currentSlide(13)" alt="Estado">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Objetos.jpg" onclick="currentSlide(14)" alt="Objetos">
     </div>
     </div>
   </div>
