--- a/translations/lordofmagna/progresos.html
+++ b/translations/lordofmagna/progresos.html
@@ -67,12 +67,12 @@ window.cookieconsent.initialise({
 				<tr>
 				<td class='title'>Sección</td><td class='title'>Traducido</td><td class='title'>Corregido</td><td class='title'>Testeado</td>
 				</tr>
-				<tr><td>Historia</td><td class='yes'>100%</td><td class='wip'>55%</td><td class='no'>No</td></tr>
-				<tr><td>Conversaciones</td><td class='yes'>100%</td><td class='wip'>35%</td><td class='no'>no</td></tr>
+				<tr><td>Historia</td><td class='yes'>100%</td><td class='wip'>65%</td><td class='no'>No</td></tr>
+				<tr><td>Conversaciones</td><td class='yes'>100%</td><td class='wip'>45%</td><td class='no'>no</td></tr>
 				<tr><td>Relaciones</td><td class='yes'>100%</td><td class='wip'>35%</td><td class='no'>no</td></tr>
-				<tr><td>Objetos</td><td class='yes'>100%</td><td class='wip'>75%</td><td class='no'>no</td></tr>
-				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='wip'>90%</td><td class='no'>no</td></tr>
-				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='wip'>50%</td><td class='no'>no</td></tr>
+				<tr><td>Objetos</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='no'>no</td></tr>
+				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='no'>no</td></tr>
+				<tr><td>Habilidades y magias</td><td class='yes'>100%</td><td class='yes'>100%</td><td class='no'>no</td></tr>
 				<tr><td>Vídeos</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Interfaz</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</table>
