--- a/translations/persona4/informacion.html
+++ b/translations/persona4/informacion.html
@@ -67,6 +67,12 @@ window.cookieconsent.initialise({
     <div class="title"><h1>¿Cuánto durará la traducción?</h1></div>
     El otro día llamamos a el servicio técnico de nuestra bola de cristal, la suya también esta estropeada y no son capaces de predecir cuándo vendrán a arreglar la nuestra, así que solo podemos decir que estará tan pronto como lo terminemos, tres meses, un año, una década, no lo sabemos, pero lo que sí sabemos es que cuanta más gente ayude antes estará :P<br>
     <br>Aun así, si tanto te gusta el juego, puedes seguirnos en nuestra cuenta de <a href="https://www.twitter.com/glowtranslate">Twitter</a>.<br>
+   	<div class="title"><h1>¿Donde puedo adquirir el juego?</h1></div>
+	El juego lo puedes adquirir en físico.
+		<ul>
+			<li><a href="https://www.amazon.es/Persona-4-PS2-Importación-inglesa/dp/B001Q9EK82/">Amazon EUR (Físico)</a>
+			<li><a href="https://www.amazon.com/Shin-Megami-Tensei-Persona-PlayStation-2/dp/B001C6GVI6/">Amazon USA (Físico)</a>
+		</ul>
    </div>
 		</div>
 		<div style="height:100px;"></div>
