--- a/translations/runefactory4/galeria.html
+++ b/translations/runefactory4/galeria.html
@@ -120,6 +120,27 @@ window.cookieconsent.initialise({
   <div class="column">
     <img onload="this.style.opacity='1';" src="gallery/Selección-de-género.jpg" onclick="openModal();currentSlide(8)" class="hover-shadow">
   </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/exploracion.jpg" onclick="openModal();currentSlide(9)" class="hover-shadow">
+  </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/mapa.jpg" onclick="openModal();currentSlide(10)" class="hover-shadow">
+  </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/runa.jpg" onclick="openModal();currentSlide(11)" class="hover-shadow">
+  </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/nombres.jpg" onclick="openModal();currentSlide(12)" class="hover-shadow">
+  </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/mochila.jpg" onclick="openModal();currentSlide(13)" class="hover-shadow">
+  </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/equipo.jpg" onclick="openModal();currentSlide(14)" class="hover-shadow">
+  </div>
+   <div class="column">
+    <img onload="this.style.opacity='1';" src="gallery/opening.jpg" onclick="openModal();currentSlide(15)" class="hover-shadow">
+  </div>
 </div>
 
 <div id="myModal" class="modal">
@@ -127,43 +148,79 @@ window.cookieconsent.initialise({
   <div class="modal-content">
 
     <div class="mySlides">
-      <div class="numbertext">1 / 8</div>
+      <div class="numbertext">1 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-1.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">2 / 8</div>
+      <div class="numbertext">2 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Dialogo-2.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">3 / 8</div>
+      <div class="numbertext">3 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Logo-Rune.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">4 / 8</div>
+      <div class="numbertext">4 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Menú-inferior.jpg" style="margin: auto;">
     </div>
     <div class="mySlides">
-      <div class="numbertext">5 / 8</div>
+      <div class="numbertext">5 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Menú-superior.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">6 / 8</div>
+      <div class="numbertext">6 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Pantalla-inicial.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">7 / 8</div>
+      <div class="numbertext">7 /15</div>
         <img onload="this.style.opacity='1';" src="gallery/Selección.jpg" style="margin: auto;">
     </div>
 
     <div class="mySlides">
-      <div class="numbertext">8 / 8</div>
+      <div class="numbertext">8 / 15</div>
         <img onload="this.style.opacity='1';" src="gallery/Selección-de-género.jpg" style="margin: auto;">
     </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">9 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/exploracion.jpg" style="margin: auto;">
+    </div>
+
+	<div class="mySlides">
+      <div class="numbertext">10 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/mapa.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">11 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/runa.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">12 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/nombres.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">13 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/mochila.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">14 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/equipo.jpg" style="margin: auto;">
+    </div>
+	
+	<div class="mySlides">
+      <div class="numbertext">15 / 15</div>
+        <img onload="this.style.opacity='1';" src="gallery/opening.jpg" style="margin: auto;">
+    </div>
+	
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
@@ -198,9 +255,37 @@ window.cookieconsent.initialise({
     <div class="column">
       <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección.jpg" onclick="currentSlide(7)" alt="Selecciones">
     </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección-de-género.jpg" onclick="currentSlide(8)" alt="Generos">
+    </div>
 
     <div class="column">
-      <img onload="this.style.opacity='1';" class="demo" src="gallery/Selección-de-género.jpg" onclick="currentSlide(8)" alt="Generos">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/exploracion.jpg" onclick="currentSlide(9)" alt="Exploración">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/mapa.jpg" onclick="currentSlide(10)" alt="Mapa">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/runa.jpg" onclick="currentSlide(11)" alt="Runa">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/nombres.jpg" onclick="currentSlide(12)" alt="Nombres de habilidades">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/mochila.jpg" onclick="currentSlide(13)" alt="Mochila mochila">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/equipo.jpg" onclick="currentSlide(14)" alt="Equipo">
+    </div>
+	
+	<div class="column">
+      <img onload="this.style.opacity='1';" class="demo" src="gallery/opening.jpg" onclick="currentSlide(15)" alt="opening">
     </div>
     </div>
   </div>
