--- a/translations/runefactory4/progresos.html
+++ b/translations/runefactory4/progresos.html
@@ -58,9 +58,9 @@ window.cookieconsent.initialise({
 			<div class="content-title">Progresos</div>
 			<div class="content">
 				<b><u>¿Qué está traducido? </u></b><br>
-				Actualmente esta traducido: Interfaz. <br><br>
+				Actualmente esta traducido: Interfaz, el equipo, los objetos, las localizaciones, las habilidades y magias runa <br><br>
 				<b><u>¿Qué falta por traducir? </u></b><br>
-				Actualmente, falta por traducir: La historia (Arco 1, Arco 2 y Arco 3), las conversaciones, los eventos, el equipo, los objetos, las localizaciones, vídeos, las habilidades, magias runa. <br><br>
+				Actualmente, falta por traducir: La historia (Arco 1, Arco 2 y Arco 3), las conversaciones, los eventos y vídeos. <br><br>
 			    <b><u>¿Cómo puedo revisar exactamente lo que lleváis traducido? </b></u><br>
 				Muy fácil, en la tabla que se muestra abajo puedes consultar los avances de la traducción, lo iremos actualizando de vez en cuando. <br><br>
 				<table class='progress'>
@@ -72,11 +72,11 @@ window.cookieconsent.initialise({
 				<tr><td>Historia: Arco 3</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Conversaciones</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Eventos</td><td class='no'>no</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Equipo</td><td class='wip'>90%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Objetos</td><td class='wip'>90%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Equipo</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Objetos</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Localizaciones</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Vídeos</td><td class='wip'>10%</td><td class='no'>no</td><td class='no'>no</td></tr>
-				<tr><td>Habilidades y magias Runa</td><td class='wip'>90%</td><td class='no'>no</td><td class='no'>no</td></tr>
+				<tr><td>Habilidades y magias Runa</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				<tr><td>Interfaz</td><td class='yes'>100%</td><td class='no'>no</td><td class='no'>no</td></tr>
 				</table>
    </div>
