--- a/translations/stellaglow/informacion.html
+++ b/translations/stellaglow/informacion.html
@@ -72,6 +72,14 @@ window.cookieconsent.initialise({
 				<div class="title"><h1>El parcheador no funciona, ¿qué pasa?</h1></div>
 				Hemos añadido un nuevo apartado en el Github de Stella Glow para este tipo de casos, se encuentra <a href="https://github.com/Glowtranslations/StellaGlowESP#faq-de-errores-sobre-el-parcheador">aquí</a>.<br>
 				Si te ocurre un error que no aparece en el F.A.Q. avisanos desde el apartado de <a href="https://github.com/Glowtranslations/StellaGlowESP/issues">"Issues"</a> y te respondemos lo antes posible.
+				<div class="title"><h1>¿Donde puedo adquirir el juego?</h1></div>
+				El juego lo puedes adquirir de manera digital o en físico.
+				<ul>
+					<li><a href="https://www.amazon.es/gp/product/B013WMW712">Amazon EUR (Físico)</a>
+					<li><a href="https://www.amazon.com/Stella-Glow-Nintendo-3DS/dp/B00ZO1SUSE/">Amazon USA (Físico)</a>
+					<li><a href="https://www.nintendo.es/Juegos/Nintendo-3DS/Stella-Glow-1084036.html">Nintendo eshop EUR (Digital)</a>
+					<li><a href="https://www.nintendo.com/games/detail/stella-glow-3ds">Nintendo eshop USA (Digital)</a>
+				</ul>
 				<div class="title"><h1>¡A disfrutar!</h1></div>
 				Como se ha mencionado antes, hemos tardado un año y medio en acabar la traducción, asi que no os vamos a entretener más.<br>
 				De parte de todo el equipo de GlowTranslations, deseamos que os lo paséis genial jugando este increíble juego, y daros las gracias por la increíble paciencia que habéis tenido y el apoyo que muchos de vosotros nos habéis brindado.<br>
